@@ -3,6 +3,6 @@ AUX gpgme-1.2.0-fix_implicit_declaration.patch 818 RMD160 5eb1c2d156637f77a2b92f
 DIST gpgme-1.1.8.tar.gz 1085576 RMD160 6ee8856956cc8082fd19da457456b84d21d94841 SHA1 5f119d57009f1b8682d7665ae985325d0885ec9b SHA256 a7f276a6d21b9fef471a3c734d8be5a04ba8364a4d239e437aa137ce18b0afd8
 DIST gpgme-1.2.0.tar.gz 1114846 RMD160 2df4e19418c2859c4b427a58d8ce653a7303d79d SHA1 21ac8faf6cd47162940d576cf1b9a8c245e8424e SHA256 b57e48e71ca507ef7ec1acc2370e007dee36a60ac26699102f35a4312c121f77
 EBUILD gpgme-1.1.8-r1.ebuild 1275 RMD160 2ae4888f4296cbe97f50c8b6e6d7d9920d51438a SHA1 145af3a8a93a47518a4e450836c2ae0d66fed9be SHA256 24751b7c87334164505241693abc1115c9afc955b4a6efcceee12461651e2740
-EBUILD gpgme-1.2.0.ebuild 1210 RMD160 cd7d7415f2c312c6576f3013f00d06847755ba5e SHA1 c4810837917724760f76e2b471528e8cd44af137 SHA256 fdcf9f3d46d60b7509c8056ba6ec9502299c9a16e3c82db619887f05c34fa7be
-MISC ChangeLog 24231 RMD160 49b7ddbf95833eb20ade655931e508bae048e02c SHA1 314840b916d6c0fa13b92cec7363dc8337c11260 SHA256 e9950781369cc0c5e4c61b22d41dde4a2f311ff110adaf72d0f6feed2b058df5
-MISC metadata.xml 421 RMD160 6467db2a7ffb640a07bbfb5137c271663ac8613f SHA1 c20459466b39b55995cd1a6bfe4709eb26f2203f SHA256 dc6e832b4e73e3346166e39067104fe27dd0da8569d471958ff1851111cf950b
+EBUILD gpgme-1.2.0.ebuild 1295 RMD160 87761823f037194a3e1a6f81d5d9b0d131fe6f4f SHA1 bcab985649bd79f924cea14931144a66874443e8 SHA256 9c285f68b375d81ea1a278020f17289ed3863f626126142a6f3cc13c16e1c83e
+MISC ChangeLog 24373 RMD160 16f3b9cc5afd1cd629bc2137b57febf86143a7d8 SHA1 435a218c2baf8fa0daead2d3016d32a35f55fe00 SHA256 8eb1d25caea470f552d82b64a50b38efa205648b419149294d0133d87c8748cb
+MISC metadata.xml 481 RMD160 4d2fa83581185d3e39130832cf4027598b5a6486 SHA1 3ddf6d522cbba3a6c86815d3dce1d1dbfb2df201 SHA256 48032fe71d068f408a7d8781d37f03e0f45bde2fb2939945b4f1825b6feee07e
