@@ -7,7 +7,8 @@
 		<description>Maintaining this package until all is a bit more stable</description>
 	</maintainer>
 	<use>
-		<flag name='pth'>Enable support for GNU Portable Threads multithreading
+		<flag name="common-lisp">Install common-lisp files</flag>
+		<flag name="pth">Enable support for GNU Portable Threads multithreading
 			library</flag>
 	</use>
 </pkgmetadata>
